# LLVM-compiler

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  compile_commands.json  main.cpp  minimal.cpp
.cache/clangd/index/: EvaLLVM.h.9BC0E4A9FD810AE0.idx  main.cpp.357981F926E52ADF.idx  main.cpp.CAE69EDB13811942.idx
backup/: Makefile.bck  test  test.bc  test.cpp
docs/compile/: command.md
docs/ide/: vscode-setup.md
src/: EvaLLVM.h
